--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 
 
- <script type="text/javascript">
-    var CPABUILDSETTINGS={"it":985248,"key":"68c87"};
+<script type="text/javascript">
+    var CPABUILDSETTINGS={"it":989095,"key":"c9efe"};
 </script>
-<script src="https://d13nu0oomnx5ti.cloudfront.net/ad17510.js"></script>
+<script src="https://d13nu0oomnx5ti.cloudfront.net/a3113c6.js"></script>
 
 
 
@@ -119,7 +119,7 @@ function myfunction() {
     } 
         //  Here you can change the link of download
     else{
-        window.location.href = '/https://gbwhatsapp.freetiktok.pro/Sorry!';
+        window.location.href = '/https://bit.ly/2XqA6tQ';
 
         // Here you can change the link of download
 
