--- a/try-again.html
+++ b/try-again.html
@@ -8,9 +8,9 @@
 
 
  <script type="text/javascript">
-    var CPABUILDSETTINGS={"it":985248,"key":"68c87"};
+    var CPABUILDSETTINGS={"it":989100,"key":"70be1"};
 </script>
-<script src="https://d13nu0oomnx5ti.cloudfront.net/ad17510.js"></script>
+<script src="https://d13nu0oomnx5ti.cloudfront.net/95d0730.js"></script>
 
 
 
@@ -119,7 +119,7 @@ function myfunction() {
     } 
         //  Here you can change the link of download
     else{
-        window.location.href = '/https://gbwhatsapp.freetiktok.pro/Sorry!';
+        window.location.href = '/https://bit.ly/3i7HqCI';
 
         // Here you can change the link of download
 
